--- a/src/main/resources/templates/authors.html
+++ b/src/main/resources/templates/authors.html
@@ -3,6 +3,21 @@
 
 <body>
 <main role="main"><br>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6 offset-md-6">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search Books...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-success">Search</button>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+
     <div class="container">
         <div class="row">
             <div class="col">
