--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -6,6 +6,20 @@
 
     <div class="container">
         <div class="row">
+            <div class="col-md-6 offset-md-6">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search Books...">
+                    <span class="input-group-btn">
+                        <a href="#" class="btn btn-success">Search</a>
+                    </span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <br>
+
+    <div class="container">
+        <div class="row">
             <div class="col">
                 <div class="card">
                     <div class="card-header">
@@ -14,14 +28,14 @@
                     <div class="card-body">
                         <table class="table table-striped table-bordered">
                             <thead class="bg-dark text-light">
-                                <tr>
-                                    <th>No</th>
-                                    <th>Title</th>
-                                    <th>Author's Name</th>
-                                    <th>Publisher</th>
-                                    <th>Price</th>
-                                    <th>Action</th>
-                                </tr>
+                            <tr>
+                                <th>No</th>
+                                <th>Title</th>
+                                <th>Author's Name</th>
+                                <th>Publisher</th>
+                                <th>Price</th>
+                                <th>Action</th>
+                            </tr>
                             </thead>
                             <tbody>
                             <tr th:each="b : ${books}">
@@ -32,14 +46,19 @@
                                 <td th:text="${b.price} + '$'"></td>
                                 <td class="mr-5">
                                     <a th:href="@{/books/edit/{id}(id=${b.id})}">
-                                        <button class="btn btn-outline-primary mr-3">Update</button>
+                                        <button class="btn btn-outline-secondary mr-3">Update</button>
                                     </a>
 
                                     <a th:href="@{/books/{id}(id=${b.id})}">
                                         <button class="btn btn-outline-danger mr-3">Delete</button>
                                     </a>
 
+                                    <a th:href="@{/books/details-view/{id}(id=${b.id})}">
+                                        <button class="btn btn-outline-primary mr-3">Details</button>
+                                    </a>
+
                                 </td>
+
                             </tr>
                             </tbody>
                         </table>
