--- a/src/main/resources/templates/books_edit_form.html
+++ b/src/main/resources/templates/books_edit_form.html
@@ -9,7 +9,7 @@
             <div class="col">
                 <div class="card bg-dark text-light">
                     <div class="card-header">
-                        <h1>Book Form</h1>
+                        <h1>Book Update Form</h1>
                     </div>
                     <div class="card-body">
                         <form th:action="@{/books/{id}(id=${book.id})}" th:object="${book}" method="post">
@@ -19,8 +19,13 @@
                             </div>
 
                             <div class="form-group">
-                                <label for="name">Author's Name</label>
-                                <input type="text" id="name" class="form-control" th:field="*{authorName}">
+                                <label for="authorName">Author's Name</label>
+                                <input type="text" id="authorName" class="form-control" th:field="*{authorName}">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="description">Description</label>
+                                <textarea id="description" cols="5" rows="3" class="form-control" th:field="*{description}"></textarea>
                             </div>
 
                             <div class="form-group">
@@ -33,8 +38,13 @@
                                 <input type="number" id="price" class="form-control" th:field="*{price}">
                             </div>
 
+                            <div class="form-group">
+                                <label for="imaUrl">Image Url</label>
+                                <input type="text" id="imaUrl" class="form-control" th:field="*{imaUrl}">
+                            </div>
+
                             <div class="box-footer">
-                                <button class="btn btn-outline-success mb-3">Save</button>
+                                <button type="submit" class="btn btn-outline-success mb-3">Save</button>
                             </div>
                         </form>
                     </div>
