--- a/src/main/resources/templates/create_book.html
+++ b/src/main/resources/templates/create_book.html
@@ -24,6 +24,11 @@
                                 </div>
 
                                 <div class="form-group">
+                                    <label for="description">Description</label>
+                                    <textarea id="description" cols="5" rows="3" class="form-control" th:field="*{description}"></textarea>
+                                </div>
+
+                                <div class="form-group">
                                     <label for="publisher">Publisher</label>
                                     <input type="text" id="publisher" class="form-control" th:field="*{publisher}">
                                 </div>
@@ -31,6 +36,11 @@
                                 <div class="form-group">
                                     <label for="price">Price</label>
                                     <input type="number" id="price" class="form-control" th:field="*{price}">
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="imaUrl">Image Url</label>
+                                    <input type="text" id="imaUrl" class="form-control" th:field="*{imaUrl}">
                                 </div>
 
                                 <div class="box-footer">
